[project]
name = "POC-secureorderbook"
version = "0.1.0"
description = """\
    Lightweight Python library for demonstrating a proof of concept for an \
    encrypted order book using secure multi-party computation (MPC) techniques.\
    """
license = {text = "MIT"}
authors = [
    {name = "RexBit Exchange"}
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "modulo~=2.1",
    "tinynmc~=0.2"
]

[project.urls]
Repository = "https://github.com/rexbit-dex/poc-orderbook-new-primitive"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.3.0",
    "sphinx-rtd-theme~=1.0.0",
    "sphinx-autodoc-typehints~=1.12.0"
]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.0"
]
lint = [
    "pylint~=2.17.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=secureorderbook --cov-report term-missing"
